--- a/1208.4700/figure.tex
+++ b/1208.4700/figure.tex
@@ -1,10 +1,59 @@
-\documentclass[a4paper,12pt]{article}%
+\documentclass[12pt]{article}%
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}%
 \setcounter{MaxMatrixCols}{30}
 \usepackage{epsf,epsfig,graphics,epstopdf}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10,
+pdfencoding=auto, psdextra
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \begin{document}
 
 \title{Introduction to Renomalization in Field Theory}
@@ -12,6 +61,8 @@
 \date{}
 \maketitle
 \tableofcontents
+
+\newpage
 
 \begin{abstract}
 A simple introduction of renormalization in quantum field theory is discussed.
@@ -27,7 +78,7 @@ infinities which need to be taken care of before the theoretical predictions
 can be compared with experimental measurements. These infinities look
 formidable at first sight. It is remarkable that over the years a way has been
 found to make sense of these apparently divergent theories
-(\cite{Renormalization},\cite{Renormalization-advanced}).
+\cite{Renormalization,Renormalization-advanced}.
 
 The theory of renormalization is a prescription which consistently isolates
 and removes all these infinities from the physically measurable quantities.
@@ -57,9 +108,9 @@ experimental measurement and can not be predicted from the theory alone.
 Eventhough the concept of renormalization is quite simple, the actual
 procedure for carrying out the operation is quite complicated and
 intimidating. In this article, we will give a bare bone of this program and
-refer interested readers to more advanced literature (\cite{BPH}%
-,\cite{Zimmermann}). Note that we need to use some regularization procedure
-(\cite{Dim reg}) to make these divergent quantities finite before we can do
+refer interested readers to more advanced literature \cite{BPH,Zimmermann}.
+Note that we need to use some regularization procedure
+\cite{Dim reg} to make these divergent quantities finite before we can do
 mathematically meaningful manipulations. We will not discuss this part in the
 short presentation here. Also note that not every relativistic field theory
 will have this property that all divergences can be absorbed into redefinition
@@ -73,7 +124,7 @@ because we do not really know how to handle the $unrenormalizable$ theory.
 There are two different methods to carry out the renormalization program, i)
 conventional renormalization which is more intuitive but mathematically
 complicated, ii) BPH renormalization which is simple to describe but not so
-transparent (\cite{BPH}). These two methods are in fact complementary to each
+transparent \cite{BPH}. These two methods are in fact complementary to each
 other and it is very useful to know both.
 
 \subsection{Conventional renormalization}
@@ -214,8 +265,9 @@ where $\Gamma\left(  0\right)  $ is logarithmic divergent and $\overset
 terms, is finite. In other words, the finite part $\overset{\_}{\Gamma}\left(
 s\right)  $ corresponds to subtracting the divergent part $\Gamma\left(
 0\right)  $ from $\Gamma\left(  s\right)  $ and is sometimes referred to as
-the $substraction$.\newline\underline{\textbf{Mass and wavefunction
-renormalization}}
+the $substraction$.
+
+\subsection*{Mass and wavefunction renormalization}
 
 The self energy contribution in Eq (\ref{self-energy}) is quadratically
 divergent. To isolate the divergences we use the Taylor expansion around some
@@ -384,8 +436,9 @@ to different looking relations. However, if these renormalization schemes make
 any sense at all, the physical laws which are relations among physically
 measurable quantities should be the same regardless of which scheme is used.
 This is the basic idea behind the $renormalization$ $group$ $equations$
-(\cite{Renor Group}).\newline\underline{\textbf{Coupling constant
-renormalization}}
+\cite{Renor Group}.
+
+\subsection*{Coupling constant renormalization}
 
 The basic coupling in $\lambda\varphi^{4}$ theory is the 4-point function
 which in 1-loop has the form, before renormalization,%
@@ -618,7 +671,7 @@ undertaking and is beyond the scope of this simple introduction.
 
 \subsection{BPH renormalization}
 
-BPH renormalization ( Bogoliubov and Parasiuk, Hepp) (\cite{BPH}) is
+BPH renormalization ( Bogoliubov and Parasiuk, Hepp) \cite{BPH} is
 completely equivalent to the conventional renormalization but organized
 differently. We will illustrate this in the simple $\lambda\varphi^{4}$ theory.
 
@@ -759,8 +812,10 @@ $ is given by,%
 ^{\left(  n\right)  }+\cdots
 \]
 We will now show that\ the counter term Lagrangian has the same structure as
-that in Eq ( \ref{counterterm}).\newline\underline{\textbf{Power Counting
-Method}}
+that in Eq ( \ref{counterterm}).
+
+\subsection*{Power Counting
+Method}
 
 This method will help to classify divergences systematically. For a given
 Feynamn diagram, we define \textbf{superficial degree of divergence }$D$ as
@@ -854,7 +909,9 @@ which is clearly the same as Eq(\ref{counterterm}) with the identification%
 \end{array}
 \]
 This illustrates the equivalence of BPH renormalization and conventional
-renormalization.\newline\underline{\textbf{More on BPH\ renormalization}}
+renormalization.
+
+\subsection*{More on BPH\ renormalization}
 
 The BPH renormalization scheme looks very simple. It is remarkable that this
 simple scheme can serve as the basis for setting up a proof for a certain
@@ -863,14 +920,14 @@ which do not show themselves on the first glance and are very useful in the
 understanding of this renormalization program. We will now discuss some of them.
 
 \begin{enumerate}
-\item \underline{\textbf{Convergence of Feynman diagrams}}
+\item {\textbf{Convergence of Feynman diagrams}}
 
 In our analysis so far, we have used the superficial degree of divergences $D
 $. It is clear that to 1-loop order that superficial degree of divergence is
 the same as the real degree of divergence. When we go beyond 1-loop it is
 possible to have an overall $D<0$ while there are real divergences in the
 subgraphs. The real convergence of a Feynman graph is governed by Weinberg's
-theorem (\cite{Weinberg theorem}) : The general Feynman integral converges if
+theorem \cite{Weinberg theorem}) : The general Feynman integral converges if
 the superficial degree of divergence of the graph together with the
 superficial degree of divergence of all subgraphs are negative. To be more
 explicit, consider a Feynman graph with $n$ external lines and $l$ loops.
@@ -912,12 +969,12 @@ Fig 8 Counterterm for 6-point function
 \end{center}
 \end{figure}
 
-\item \underline{\textbf{Classification of divergent graphs}}\newline It is
+\item {\textbf{Classification of divergent graphs}} It is
 useful to distinguish divergent graphs with different topologies in the
 construction of counterterms.
 
 \begin{enumerate}
-\item \underline{Primitively divergent graphs}\newline A primitively divergent
+\item {Primitively divergent graphs} A primitively divergent
 graph has a nonnegative overall superficial degree of divergence but is
 convergent for all subintegrations. Thus these are diagrams in which the only
 divergences is caused by all of the loop momenta growing large together. This
@@ -926,7 +983,7 @@ of the internal loop momenta will have more power in the denominator and will
 improve the convergence of the diagram. It is then clear that all the
 divergences can be isolated in the first few terms of the Taylor expansion.
 
-\item \underline{Disjointed divergent graphs}\newline Here the divergent
+\item {Disjointed divergent graphs} Here the divergent
 subgraphs are disjointed. \ For illustration, consider the 2-loop graph given
 below,
 \begin{figure}
@@ -983,7 +1040,7 @@ form of polynomials in external momenta. Thus for graphs with disjointed
 divergences we need to include the lower order counter terms to remove the
 divergences by substractions in Taylor expansion.
 
-\item \underline{Nested divergent graphs}
+\item {Nested divergent graphs}
 
 In this case one of a pair of divergent 1PI is entirely contained within the
 other as shown in the following diagram,
@@ -1009,7 +1066,7 @@ Fig 12 lower order counterterm
 Again diagrams with lower-order counterterm insertions must be included in
 order to aggregate the divergences into the form of polynomial in external momenta.
 
-\item \underline{Overlapping divergent graphs}\newline These diagrams are
+\item {Overlapping divergent graphs} These diagrams are
 those divergences which are neither nested nor disjointed. These are most
 difficult to analyze. An example of this is shown below,
 \begin{figure}
@@ -1022,7 +1079,7 @@ Fig 13 Overlapping divergences
 
 The study of \ how to disentangle these overlapping divergences is beyond the
 scope of this simple introduction and we refer interested readers to the
-literature (\cite{BPH}.\cite{Zimmermann}).
+literature \cite{BPH,Zimmermann}.
 \end{enumerate}
 \end{enumerate}
 
@@ -1031,7 +1088,7 @@ useful in organizing the higher order divergences in a more systematic way for
 the removing of divergences by constructing the counterterms.
 
 The general analysis of the renormalization program has been carried out by
-Bogoliubov, Parasiuk, Hepp (\cite{BPH}). The result is known as BPH theorem,
+Bogoliubov, Parasiuk, Hepp \cite{BPH}. The result is known as BPH theorem,
 which states that for a general renormalizable field theory, to any order in
 perturbation theory, all divergences are removed by the counterterms
 corresponding to superficially divergent amplitudes.
@@ -1138,18 +1195,18 @@ dimension of the coupling constant $g_{i}$ as%
 We distinguish 3 different situations;
 
 \begin{enumerate}
-\item $\delta_{i}<0$\newline In this case, $D$ decreases with the number of
+\item $\delta_{i}<0$ In this case, $D$ decreases with the number of
 i-th type of vertices and the interaction is called $super-renormalizable$
 $interaction$. The divergences occur only in some lower order diagrams. There
 is only one type of theory in this category, namely $\phi^{3}$ interaction.
 
-\item $\delta_{i}=0$\newline Here $D$ is independent of the number of i-th
+\item $\delta_{i}=0$ Here $D$ is independent of the number of i-th
 type of vertices and interactions are called $renormalizable$ $interactions$.
 The divergence are present in all higher-order diagrams of a finite number of
 Green's functions. Interactions in this category are of the form, $g\phi^{4},$
 $f\left(  \overset{\_}{\psi}\psi\right)  \phi.$
 
-\item $\delta_{i}>0$\newline Then $D$ increases with the number of the i-th
+\item $\delta_{i}>0$ Then $D$ increases with the number of the i-th
 type of vertices and all Green's functions are divergent for large enough
 $n_{i}.$ These are called $non-renormalizable$ $interactions.$ There are
 plenty of examples in this category, $g_{1}\overset{\_}{\psi}\gamma^{\mu}%
@@ -1216,7 +1273,9 @@ and it is related to the index of divergence as%
 _{i}\right)  -4
 \]
 We see that a dimension 4 interaction is renormalizable and greater than 4 is
-non-renormalizable.\newline\underline{\textbf{Counter terms}}
+non-renormalizable.
+
+\subsection*{Counter terms}
 
 Recall that we add counterterms to cancel all the divergences in Green's
 functions with superficial degree of divergences $D\geq0.$ For convenience we
@@ -1277,14 +1336,17 @@ Fig 14 Box diagram for Yukawa coupling
 
 is logarithmically divergent and needs a counter term of the form $\phi^{4}$
 which is not present in the original Lagrangain. Thus Yukawa interaction with
-additional $\phi^{4}$ interaction is renormalizable.\newline\underline
-{\textbf{Theories with vector fields}}
+additional $\phi^{4}$ interaction is renormalizable.
+
+
+\subsection*{Theories with vector fields}
+
 
 Here we distinguish massless from massive vector fields because their
 asymptotic behaviors for the free field propagators are very different.
 
 \begin{enumerate}
-\item \underline{Massless vector field}\newline Massless vector field is
+\item {Massless vector field}\newline Massless vector field is
 usually associated with local gauge invariance as in the case of QED. The
 asymptotic behavior of free field propagator for such vector field is very
 similar to that of scalar field. For example, in the Feynman gauge we have%
@@ -1302,7 +1364,7 @@ category are of the type,%
 \]
 Here $A^{\mu}$ is a massless vector field and $\psi$ a fermion field.
 
-\item \underline{Massive vector field}\newline Here the free Lagrangian is of
+\item {Massive vector field}\newline Here the free Lagrangian is of
 the form,%
 \[%
 %TCIMACRO{\tciLaplace}%
@@ -1345,7 +1407,7 @@ important exceptions should be noted;
 \begin{enumerate}
 \item In a gauge theory with spontaneous symmetry breaking, the gauge boson
 will acquire mass in such a way to preserve the renormalizability of the
-theory (\cite{Hooft}).
+theory \cite{Hooft}.
 
 \item A theory with a neutral massive vector boson coupled to a conserved
 current is also renormalizable. Heuristically, we can understand this as
@@ -1382,7 +1444,7 @@ In momentum space we have
 %EndExpansion
 d^{4}x_{i}e^{-ip_{i}x_{i}}G_{\Omega}^{(n)}(x;x_{1},x_{2},x_{3},...,x_{n})
 \end{align*}
-In perturbation theory, we can use Wick's theorem (\cite{Wick}) to work out
+In perturbation theory, we can use Wick's theorem \cite{Wick} to work out
 these Green's functions in terms of Feynman diagram.\newline Example, to
 lowest order in $\lambda$ the 2-point function with one composite operator
 $\Omega(x)=\frac{1}{2}\phi^{2}(x)$ is, after using the Wick's theorem,
@@ -1444,8 +1506,11 @@ $\mathcal{L}$%
 where $\chi(x)$ is a c-number source function. We can construct the generating
 functional $W[\chi]$ in the presence of this external source. We obtain the
 connected Green's function by differentiating $\ln W[\chi]$ with respect to
-$\chi$ and then setting $\chi$ to zero.\newline\underline
-{\textbf{Renormalization of composite operators}}\newline Superficial degrees
+$\chi$ and then setting $\chi$ to zero.
+
+\subsection*{Renormalization of composite operators}
+
+Superficial degrees
 of divergence for Green 's function with one composite operator is,%
 \[
 D_{\Omega}=D+\delta_{\Omega}=D+(d_{\Omega}-4)
@@ -1595,7 +1660,7 @@ _{2}\right)  ^{2},\qquad\left(  \phi_{1}^{2}+\phi_{2}^{2}\right)  ^{2}%
 
 
 \begin{enumerate}
-\item \underline{\textbf{Broken symmetry and renormalization}}\newline For the
+\item {\textbf{Broken symmetry and renormalization}}\newline For the
 case the symmetry is slightly broken an interesting feature occurs. We will
 illustrate this with a simple case where the symmetry breaking is of the form,%
 \[%
@@ -1665,12 +1730,12 @@ Thus when $\dim\left(
 %EndExpansion
 _{SB}\right)  \leq3,$ the dimension of counter terms cannot be $4.$ This
 situation is usually referred to as soft breaking of the symmetry. This is
-known as the $Szymanzik$ $theorem$ (\cite{Szymanzik}). Note that for the soft
+known as the $Szymanzik$ $theorem$ \cite{Szymanzik}. Note that for the soft
 breaking the coupling constant $g_{SB}$ will have positive dimension of mass
 and will be negligible when energies become much larger than $g_{SB}.$ In
 other words, the symmetry will be restored at high energies.
 
-\item \underline{\textbf{Ward Identity}} (\cite{Ward})\newline In case of
+\item {\textbf{Ward Identity}} \cite{Ward}\newline In case of
 global symmetry, we also have some useful relation for composite operator like
 the current operator which generates the symmetry. We will give a simple
 illustration of this feature. The Lagrangian given in Eq (\ref{O(2) symmetry})
@@ -1750,7 +1815,7 @@ and we get%
 -iq^{\mu}G_{\mu}\left(  p,q\right)  =\Delta\left(  p+q\right)  -\Delta\left(
 p\right)  \label{Ward}%
 \end{equation}
-This is example of Ward identity (\cite{Ward}).\newline This relation is
+This is example of Ward identity \cite{Ward}. This relation is
 derived in terms of unrenomalized fields which satisfy the canonical
 commutation relation. In terms of renormalized quantities,
 \[
