--- a/1208.4700/figure.tex
+++ b/1208.4700/figure.tex
@@ -8,7 +8,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 %\usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\usepackage[papersize={7in, 10.0in}, left=.6in, right=.6in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
 \raggedbottom
@@ -426,8 +426,8 @@ Or in terms of renormalized propagator,%
 \Delta_{R}^{-1}\left(  0\right)  =-\mu^{2},\qquad\left.  \dfrac{d}{dp^{2}%
 }\Delta_{R}^{-1}\left(  p^{2}\right)  \right\vert _{p^{2}=0}=1
 \]
-Sometimes in the renormalization prescription we replace the statement "
-Taylor expansion around $p^{2}=\mu^{2},$or $p^{2}=0"$ by relations expressed,
+Sometimes in the renormalization prescription we replace the statement
+``Taylor expansion around $p^{2}=\mu^{2},$or $p^{2}=0$'' by relations expressed,
 in Eq (\ref{finite-part},\ref{finite part 2}), called the $renormalization$
 $conditions$. One important feature to keep in mind is that in carrying out
 the renormalization program there is an arbitrariness in choosing the points
@@ -671,7 +671,7 @@ undertaking and is beyond the scope of this simple introduction.
 
 \subsection{BPH renormalization}
 
-BPH renormalization ( Bogoliubov and Parasiuk, Hepp) \cite{BPH} is
+BPH renormalization (Bogoliubov and Parasiuk, Hepp) \cite{BPH} is
 completely equivalent to the conventional renormalization but organized
 differently. We will illustrate this in the simple $\lambda\varphi^{4}$ theory.
 
@@ -812,7 +812,7 @@ $ is given by,%
 ^{\left(  n\right)  }+\cdots
 \]
 We will now show that\ the counter term Lagrangian has the same structure as
-that in Eq ( \ref{counterterm}).
+that in Eq (\ref{counterterm}).
 
 \subsection*{Power Counting
 Method}
@@ -838,7 +838,7 @@ D=4-B \label{Superficial Div}%
 It is important to note that $D$ depends only on the number of external lines,
 $B$ and not on $n,$ the number of vertices. This is a consequence of
 $\lambda\phi^{4}$ theory and might not hold for other interactions. From this
-Eq (\ref{Superficial Div}) we see that $D\geq0$ only for $B=2,4$ ( $B=$ even
+Eq (\ref{Superficial Div}) we see that $D\geq0$ only for $B=2,4$ ($B=$ even
 because of the symmetry $\phi\rightarrow-\phi$ ). In the analysis of
 divergences, we will use the superficial degree of divergences to construct
 the counterterms. The reason for this will be explained later.
@@ -927,7 +927,7 @@ $. It is clear that to 1-loop order that superficial degree of divergence is
 the same as the real degree of divergence. When we go beyond 1-loop it is
 possible to have an overall $D<0$ while there are real divergences in the
 subgraphs. The real convergence of a Feynman graph is governed by Weinberg's
-theorem \cite{Weinberg theorem}) : The general Feynman integral converges if
+theorem \cite{Weinberg theorem}: The general Feynman integral converges if
 the superficial degree of divergence of the graph together with the
 superficial degree of divergence of all subgraphs are negative. To be more
 explicit, consider a Feynman graph with $n$ external lines and $l$ loops.
@@ -986,6 +986,12 @@ divergences can be isolated in the first few terms of the Taylor expansion.
 \item {Disjointed divergent graphs} Here the divergent
 subgraphs are disjointed. \ For illustration, consider the 2-loop graph given
 below,
+It is clear that differentiating with respect to the external momentum will
+improve only one of the loop integration but not both. As a result, not all
+divergences in this diagram can be removed by subtracting out the first few
+terms in the Taylor expansion around external momenta. However, the lower
+order counter terms in the BPH scheme will come in to save the day. The
+Feynman integral is written as%
 \begin{figure}
 \begin{center}
 {\includegraphics{M7QXRJ08.pdf}}
@@ -993,13 +999,6 @@ below,
 Fig 9 two-loop disjoint divergence
 \end{center}
 \end{figure}
-
-It is clear that differentiating with respect to the external momentum will
-improve only one of the loop integration but not both. As a result, not all
-divergences in this diagram can be removed by subtracting out the first few
-terms in the Taylor expansion around external momenta. However, the lower
-order counter terms in the BPH scheme will come in to save the day. The
-Feynman integral is written as%
 \[
 \Gamma_{a}^{\left(  4\right)  }\left(  p\right)  \propto\lambda^{3}\left[
 \Gamma\left(  p\right)  \right]  ^{2}%
@@ -1027,12 +1026,12 @@ Fig 10 two-loop graphs with counterms
 
 which are proportional to $-\lambda^{3}\Gamma\left(  0\right)  \Gamma\left(
 p\right)  .$ Adding these 3 contributions, we get%
-\begin{align*}
-&  \lambda^{3}\left[  \Gamma\left(  p\right)  \right]  ^{2}-2\lambda^{3}%
+\[
+\lambda^{3}\left[  \Gamma\left(  p\right)  \right]  ^{2}-2\lambda^{3}%
 \Gamma\left(  0\right)  \Gamma\left(  p\right) \\
-&  =\lambda^{3}\left[  \Gamma\left(  p\right)  -\Gamma\left(  0\right)
+  =\lambda^{3}\left[  \Gamma\left(  p\right)  -\Gamma\left(  0\right)
 \right]  ^{2}-\lambda^{3}\left[  \Gamma\left(  0\right)  \right]  ^{2}%
-\end{align*}
+\]
 Since the combination in the first $\left[  \cdots\right]  $ is finite, the
 divergence in the last term can be removed by one differentiation. Here we see
 that with the inclusion of lower order counterterms, the divergences take the
@@ -1076,7 +1075,6 @@ difficult to analyze. An example of this is shown below,
 Fig 13 Overlapping divergences
 \end{center}
 \end{figure}
-
 The study of \ how to disentangle these overlapping divergences is beyond the
 scope of this simple introduction and we refer interested readers to the
 literature \cite{BPH,Zimmermann}.
@@ -1213,7 +1211,6 @@ plenty of examples in this category, $g_{1}\overset{\_}{\psi}\gamma^{\mu}%
 \psi\partial_{\mu}\phi,$ $g_{2}\left(  \overset{\_}{\psi}\psi\right)  ^{2},$
 $g_{3}\phi^{5},\cdots$
 \end{enumerate}
-
 The index of divergence $\delta_{i}$ can be related to the operator's
 $canonical$ $dimension$ which is defined in terms of the high energy behavior
 in the free field theory. More specifically, for any operator $A,$ we write
@@ -1434,16 +1431,16 @@ G_{\Omega}^{(n)}(x;x_{1},x_{2},x_{3},...,x_{n})=\left\langle 0|T(\frac{1}%
 {2}\phi^{2}(x)\phi(x_{1})\phi(x_{2})...\phi(x_{n}))|0\right\rangle
 \]
 In momentum space we have
-\begin{align*}
-&  (2\pi)^{4}\delta^{4}(p+p_{1}+p_{2}+...+p_{n})G_{\phi^{2}}^{(n)}%
+\begin{multline*}
+(2\pi)^{4}\delta^{4}(p+p_{1}+p_{2}+...+p_{n})G_{\phi^{2}}^{(n)}%
 (p;p_{1},p_{2},p_{3},...,p_{n})\\
-&  =\int d^{4}x\;e^{-ipx}\int%
+=\int d^{4}x\;e^{-ipx}\int%
 %TCIMACRO{\dprod \limits_{i=1}^{n}}%
 %BeginExpansion
 {\displaystyle\prod\limits_{i=1}^{n}}
 %EndExpansion
 d^{4}x_{i}e^{-ip_{i}x_{i}}G_{\Omega}^{(n)}(x;x_{1},x_{2},x_{3},...,x_{n})
-\end{align*}
+\end{multline*}
 In perturbation theory, we can use Wick's theorem \cite{Wick} to work out
 these Green's functions in terms of Feynman diagram.\newline Example, to
 lowest order in $\lambda$ the 2-point function with one composite operator
@@ -1467,17 +1464,14 @@ If we truncate the external propagators, we get
 Fig 15 Graphs for composite operator
 \end{center}
 \end{figure}
-
 To first order in $\lambda$, we have
-\[
-G_{\phi^{2}}^{(2)}(x,x_{1},x_{2})=\int\left\langle 0|T\{\frac{1}{2}\phi
+\begin{align*}
+G_{\phi^{2}}^{(2)}(x,x_{1},x_{2})&=\int\left\langle 0|T\{\frac{1}{2}\phi
 ^{2}(x)\phi(x_{1})\phi(x_{2})\frac{\left(  -i\lambda\right)  }{4!}\phi
-^{4}(y)\}|0\right\rangle d^{4}y
-\]%
-\[
-=\int d^{4}y\frac{-i\lambda}{2}[i\Delta(x-y)]^{2}i\Delta(x_{1}-y)i\Delta
+^{4}(y)\}|0\right\rangle d^{4}y\\
+&=\int d^{4}y\frac{-i\lambda}{2}[i\Delta(x-y)]^{2}i\Delta(x_{1}-y)i\Delta
 (x_{2}-y)
-\]
+\end{align*}
 The amputated 1PI momentum space Green's function is
 \[
 \Gamma_{\phi^{2}}^{(2)}(p;p_{1},-p-p_{1})=\frac{-i\lambda}{2}\int\frac{d^{4}%
@@ -1549,24 +1543,21 @@ with
 Such composite operators are said to be multiplicative renormalizable and
 Green's functions of unrenormalized operator $\Omega_{0}$ is related to that
 of renormalized operator $\Omega$ by
-\[
-G_{\Omega_{0}}^{(n)}(x;x_{1},x_{2},...x_{n})=\left\langle 0|T\{\Omega
-_{0}(x)\phi(x_{1})\phi(x_{2})...\phi(x_{n})\}|0\right\rangle
-\]%
-\begin{equation}
-\quad\quad\quad=Z_{\Omega}Z_{\phi}^{n/2}G_{lR}^{(n)}(x;x_{1},...x_{n})
-\label{Composite}%
-\end{equation}
+\begin{align}
+G_{\Omega_{0}}^{(n)}(x;x_{1},x_{2},...x_{n})&=\left\langle 0|T\{\Omega
+_{0}(x)\phi(x_{1})\phi(x_{2})...\phi(x_{n})\}|0\right\rangle\nonumber\\
+&=Z_{\Omega}Z_{\phi}^{n/2}G_{lR}^{(n)}(x;x_{1},...x_{n})
+\end{align}
 For more general cases, $\Delta\Omega\neq c\Omega$ and the renormalization of
 a composite operator may require counterterms proportional to other composite
 operators.\newline Example: Consider 2 composite operators $A$ and $B.$ Denote
 the counterterms by $\Delta A$ and $\Delta B.$ Including the counter terms we
-can write,\newline%
+can write%
 \[
 L[\chi]=L[0]+\chi_{A}(A+\Delta A)+\chi_{B}(B+\Delta B)
 \]
 Very often with counterterms $\Delta A$ and $\Delta B$ are linear combinations
-of A and B\newline%
+of A and B%
 \[
 \Delta A=C_{AA}A+C_{AB}B
 \]%
@@ -1602,24 +1593,25 @@ Z_{A^{^{\prime}}} & 0\\
 Then
 \[
 L[\chi]=L[0]+Z_{A^{^{\prime}}}\chi_{A^{^{\prime}}}A^{^{\prime}}+Z_{B^{^{\prime
-}}}\chi_{B^{^{\prime}}}B^{^{\prime}}%
-\]%
-\[
+}}}\chi_{B^{^{\prime}}}B^{^{\prime}}
+\]
+and
+\begin{align*}
 \left(
 \begin{array}
 [c]{c}%
 A^{^{\prime}}\\
 B^{^{\prime}}%
 \end{array}
-\right)  =V\left(
+\right)  &=V\left(
 \begin{array}
 [c]{c}%
 A\\
 B
 \end{array}
-\right)  \quad\left(  \chi_{A^{^{\prime}}}\ \chi_{B^{^{\prime}}}\right)
-=\left(  \chi_{A}\;\ \chi_{B}\right)  U
-\]
+\right)  \quad\left(  \chi_{A^{^{\prime}}}\ \chi_{B^{^{\prime}}}\right)\\
+&=\left(  \chi_{A}\;\ \chi_{B}\right)  U
+\end{align*}
 and $A^{^{\prime}}\;,B^{^{\prime}}$ are multiplicatively
 renormalizable.\newline
 
