--- a/1208.4700/figure.tex
+++ b/1208.4700/figure.tex
@@ -60,15 +60,16 @@ pdfencoding=auto, psdextra
 \author{Ling-Fong Li\\Carnegie Mellon University, Pittsburgh, PA. USA\\and \\Chongqing Univerisity of Posts \& Telecommunications, \\Chongqing, China}
 \date{}
 \maketitle
-\tableofcontents
-
-\newpage
 
 \begin{abstract}
 A simple introduction of renormalization in quantum field theory is discussed.
 Explanation of concepts is emphasized instead of the technical details.
 
 \end{abstract}
+\tableofcontents
+
+\newpage
+
 
 \section{Introduction}
 
@@ -82,7 +83,7 @@ found to make sense of these apparently divergent theories
 
 The theory of renormalization is a prescription which consistently isolates
 and removes all these infinities from the physically measurable quantities.
-Note that the need for renomalization is quite general and is not unique to
+Note that the need for renormalization is quite general and is not unique to
 the relativistic field theory. For example, consider an electron moving inside
 a solid. If the interaction between electron and the lattice of the solid is
 weak enough, we can use an effective mass $m^{\ast}$ to describe its response
@@ -105,25 +106,25 @@ absorb the divergences so that the physically measurable quantities are
 finite. The renormalized mass which is now finite can only be determined from
 experimental measurement and can not be predicted from the theory alone.
 
-Eventhough the concept of renormalization is quite simple, the actual
+Even though the concept of renormalization is quite simple, the actual
 procedure for carrying out the operation is quite complicated and
-intimidating. In this article, we will give a bare bone of this program and
+intimidating. In this article, we will give a bare bones description of this program and
 refer interested readers to more advanced literature \cite{BPH,Zimmermann}.
 Note that we need to use some regularization procedure
 \cite{Dim reg} to make these divergent quantities finite before we can do
 mathematically meaningful manipulations. We will not discuss this part in the
 short presentation here. Also note that not every relativistic field theory
-will have this property that all divergences can be absorbed into redefinition
+will have the property that all divergences can be absorbed into the redefinition
 of few physical parameters. Those which have this property are called
-$renormalizable$ theories and those which don't are called unrenormalizable
+{\it renormalizable} theories and those which don't are called {\it unrenormalizable}
 theories. This has became an important criteria for choosing a right theory
-because we do not really know how to handle the $unrenormalizable$ theory.
+because we do not really know how to handle the {\it unrenormalizable} theory.
 
 \section{Renormalization Schemes}
 
-There are two different methods to carry out the renormalization program, i)
+There are two different methods to carry out the renormalization program, 1)
 conventional renormalization which is more intuitive but mathematically
-complicated, ii) BPH renormalization which is simple to describe but not so
+complicated, 2) BPH renormalization which is simple to describe but not so
 transparent \cite{BPH}. These two methods are in fact complementary to each
 other and it is very useful to know both.
 
@@ -206,7 +207,7 @@ the 1PI divergent graphs are
 \begin{center}
 {\includegraphics{M7QXRI01.pdf}}
 \\
-Fig 2. 1-loop 2-point funcrion
+Fig 2. 1-loop 2-point function
 \end{center}
 \end{figure}
 
@@ -265,7 +266,7 @@ where $\Gamma\left(  0\right)  $ is logarithmic divergent and $\overset
 terms, is finite. In other words, the finite part $\overset{\_}{\Gamma}\left(
 s\right)  $ corresponds to subtracting the divergent part $\Gamma\left(
 0\right)  $ from $\Gamma\left(  s\right)  $ and is sometimes referred to as
-the $substraction$.
+the {\it substraction}.
 
 \subsection*{Mass and wavefunction renormalization}
 
@@ -311,9 +312,9 @@ p^{2}\right)  +i\varepsilon}%
 and using Eq (\ref{finite-part}) we see that $\Delta\left(  p\right)  $ has a
 pole at $p^{2}=\mu^{2}.$ Thus $\mu^{2}$ is the \textbf{physical mass} and is
 related to the bare mass $\mu_{0}^{2}$ in Eq (\ref{mass-renormalization}).
-This is the $mass$ $renormalization.$ Since $\Sigma\left(  \mu^{2}\right)  $
+This is the {\it mass renormalization}. Since $\Sigma\left(  \mu^{2}\right)  $
 is divergent, the bare mass $\mu_{0}^{2}$ must also be divergent so that the
-combination $\mu_{0}^{2}+\Sigma\left(  \mu^{2}\right)  $ is finite and
+combination $\mu_{0}^{2}+\Sigma\left(  \mu^{2}\right)$ is finite and
 measurable. In other words, the bare mass $\mu_{0}^{2}$ has to diverge in such
 a way that its divergence cancels the divergent loop correction to yield a
 finite result. It amounts to shuffling the infinities to unobservable
@@ -357,7 +358,7 @@ i\Delta_{R}\left(  p\right)   &  =\int d^{4}xe^{-ip\cdot x}\left\langle
 ^{2}\right)  -\widetilde{\Sigma}\left(  p^{2}\right)  +i\varepsilon}\nonumber
 \end{align}
 and it is completely finite. $Z_{\varphi}$ is usually called the
-$wavefunction$ $renormalization$ $constant$. Thus another divergence is
+{\it wavefunction renormalization constant}. Thus another divergence is
 shuffled into the bare field operator $\varphi_{0}$ which is also not measurable.
 
 The new renormalized field operator $\varphi$ should also be applied to the
@@ -428,14 +429,14 @@ Or in terms of renormalized propagator,%
 \]
 Sometimes in the renormalization prescription we replace the statement
 ``Taylor expansion around $p^{2}=\mu^{2},$or $p^{2}=0$'' by relations expressed,
-in Eq (\ref{finite-part},\ref{finite part 2}), called the $renormalization$
+in Eq (\ref{finite-part},\ref{finite part 2}), called the {\it renormalization}
 $conditions$. One important feature to keep in mind is that in carrying out
 the renormalization program there is an arbitrariness in choosing the points
 for the Taylor expansion. Different renormalization schemes seem to give rise
 to different looking relations. However, if these renormalization schemes make
 any sense at all, the physical laws which are relations among physically
 measurable quantities should be the same regardless of which scheme is used.
-This is the basic idea behind the $renormalization$ $group$ $equations$
+This is the basic idea behind the {\it renormalization group equations}
 \cite{Renor Group}.
 
 \subsection*{Coupling constant renormalization}
@@ -660,7 +661,7 @@ p_{n};\lambda_{0},\mu_{0},\Lambda\right)
 where $\Lambda$ is the cutoff needed to define the divergent integrals. This
 feature, in which all the divergences, after rewriting $\mu_{0}$ and
 $\lambda_{0}$ in terms of $\mu$ and $\lambda$ are aggregated into some
-multiplicative constants, is called being $multiplicatively$ $renormalizable$.
+multiplicative constants, is called being {\it multiplicatively renormalizable}.
 
 \bigskip
 
@@ -713,7 +714,7 @@ where%
 \label{renormalized Lagrangian}%
 \end{equation}
 has exactly the same form as the original Lagrangian, is called the
-$renormalized$ $Lagrangian$, and%
+{\it renormalized Lagrangian}, and%
 \begin{equation}
 \Delta%
 %TCIMACRO{\tciLaplace}%
@@ -1047,7 +1048,7 @@ other as shown in the following diagram,
 \begin{center}
 {\includegraphics{M7QXRJ0A.pdf}}
 \\
-Fig 11 Nested divergences
+Fig 11 Nested divergences.
 \end{center}
 \end{figure}
 
@@ -1058,7 +1059,7 @@ counter terms as shown below,
 \begin{center}
 {\includegraphics{M7QXRK0B.pdf}}
 \\
-Fig 12 lower order counterterm
+Fig 12. Lower order counter-term.
 \end{center}
 \end{figure}
 
@@ -1178,7 +1179,7 @@ where%
 \[
 \delta_{i}=b_{i}+\dfrac{3}{2}f_{i}+d_{i}-4
 \]
-is called the $index$ $of$ $divergence$ of the interaction. Using the fact
+is called the {\it index of divergence} of the interaction. Using the fact
 that Lagrangian density $%
 %TCIMACRO{\tciLaplace}%
 %BeginExpansion
@@ -1194,25 +1195,25 @@ We distinguish 3 different situations;
 
 \begin{enumerate}
 \item $\delta_{i}<0$ In this case, $D$ decreases with the number of
-i-th type of vertices and the interaction is called $super-renormalizable$
-$interaction$. The divergences occur only in some lower order diagrams. There
+i-th type of vertices and the interaction is called {\it super-renormalizable
+interaction}. The divergences occur only in some lower order diagrams. There
 is only one type of theory in this category, namely $\phi^{3}$ interaction.
 
 \item $\delta_{i}=0$ Here $D$ is independent of the number of i-th
-type of vertices and interactions are called $renormalizable$ $interactions$.
+type of vertices and interactions are called {\it renormalizable interactions}.
 The divergence are present in all higher-order diagrams of a finite number of
 Green's functions. Interactions in this category are of the form, $g\phi^{4},$
 $f\left(  \overset{\_}{\psi}\psi\right)  \phi.$
 
 \item $\delta_{i}>0$ Then $D$ increases with the number of the i-th
 type of vertices and all Green's functions are divergent for large enough
-$n_{i}.$ These are called $non-renormalizable$ $interactions.$ There are
+$n_{i}.$ These are called {\it non-renormalizable interactions}. There are
 plenty of examples in this category, $g_{1}\overset{\_}{\psi}\gamma^{\mu}%
 \psi\partial_{\mu}\phi,$ $g_{2}\left(  \overset{\_}{\psi}\psi\right)  ^{2},$
 $g_{3}\phi^{5},\cdots$
 \end{enumerate}
 The index of divergence $\delta_{i}$ can be related to the operator's
-$canonical$ $dimension$ which is defined in terms of the high energy behavior
+{\it canonical dimension} which is defined in terms of the high energy behavior
 in the free field theory. More specifically, for any operator $A,$ we write
 the 2-point function as%
 \[
@@ -1722,7 +1723,7 @@ Thus when $\dim\left(
 %EndExpansion
 _{SB}\right)  \leq3,$ the dimension of counter terms cannot be $4.$ This
 situation is usually referred to as soft breaking of the symmetry. This is
-known as the $Szymanzik$ $theorem$ \cite{Szymanzik}. Note that for the soft
+known as the {\it Szymanzik theorem} \cite{Szymanzik}. Note that for the soft
 breaking the coupling constant $g_{SB}$ will have positive dimension of mass
 and will be negligible when energies become much larger than $g_{SB}.$ In
 other words, the symmetry will be restored at high energies.
@@ -1791,7 +1792,7 @@ x\right)  \phi\left(  y\right)  \phi^{\dag}\left(  0\right)  \right)
 &  =-i\int d^{4}xe^{-i(q+p)\cdot x}\left\langle 0\left\vert T\left(
 \phi\left(  x\right)  \phi^{\dag}\left(  0\right)  \right)  \right\vert
 0\right\rangle \\
-&  +i\int d^{4}xe^{-ip\cdot y}\left\langle 0\left\vert T\left(  \phi\left(
+&  \quad +i\int d^{4}xe^{-ip\cdot y}\left\langle 0\left\vert T\left(  \phi\left(
 y\right)  \phi^{\dag}\left(  0\right)  \right)  \right\vert 0\right\rangle
 \end{align*}
 where we have used the current conservation and commutators in Eqs
@@ -1832,12 +1833,11 @@ form,%
 \]
 Such a non-renormalization result holds for many conserved quantities.
 \end{enumerate}
-
 I would like to thank Professor Yungui Gong for hospitality during my visit to
 Chongqing Univeristy of Posts and Telecommunications where parts of this
 manuscript is written.
 
-\bigskip
+\newpage
 
 \begin{thebibliography}{99}                                                                                               
 
@@ -1846,20 +1846,20 @@ manuscript is written.
 (1949), S. Tomonaga, Phys. Rev. \textbf{74}, 224 (1948), F. J. Dyson, Phys.
 Rev. \textbf{75}, 486 (1949).
 
-\bibitem {Renormalization-advanced}C. Itzykson, and J.-B. Zuber, "Quantum
+\bibitem {Renormalization-advanced}C. Itzykson, and J.-B. Zuber, ``Quantum
 Field Theory", McGraw-Hill, New York, (1980). N. N. Bogoliubov and D. V.
-Shirkov, "Introduction to Theories of Quantized Fields" (3rd edition)
+Shirkov, ``Introduction to Theories of Quantized Fields" (3rd edition)
 Wiley-Interscience, New York, (1980). M. E. Peskin and D. Schroeder, "An
 Introduction to Quantum Field Theory", Addison-Wiley, New York, 1995. S.
-Weinberg, " The Quantum Theory of Fields" Vol, 1, 2, and 3, Cambridge
+Weinberg, ``The Quantum Theory of Fields" Vol, 1, 2, and 3, Cambridge
 University Press, Cambridge (1995).
 
 \bibitem {BPH}N. N. Bogoliubov and O. S. Parasiuk, Acta. Math. \textbf{97},
 227 (1957), K. Hepp, Comm. Math. Phys. 2, 301, (1966), W. Zimmermann, In
-"Lectures on Elementary Particles and Quantum Field Theory", Proc. 1970
+``Lectures on Elementary Particles and Quantum Field Theory", Proc. 1970
 Brandeis Summer Institute (ed. S. Deser et al) MIT\ Press, Cambridge, Mass. (1970).
 
-\bibitem {Zimmermann}W. Zimmermann, in "Lectures on elementary particle and
+\bibitem {Zimmermann}W. Zimmermann, in ``Lectures on elementary particle and
 quantum field theory" Pro. 1970 Brandies Summer Institute (ed S. Deser) MIT
 Press Cambridge, Massachusetts.
 
